# SAnalysis

./: .gitignore  CLAUDE.md  Project.md  main.py  pyproject.toml
.claude/agent-memory/SDE-Team/: MEMORY.md
.claude/agent-memory/gamma-flow-hunter/: MEMORY.md  code-review-findings.md
.claude/agent-memory/low-float-breakout/: MEMORY.md
.claude/agent-memory/momentum-catalyst-fusion/: MEMORY.md
.claude/agent-memory/short-squeeze-sniper/: MEMORY.md
.claude/agent-memory/social-sentiment-quant/: MEMORY.md
.claude/agents/: SDE-Team.md  gamma-flow-hunter.md  low-float-breakout.md  momentum-catalyst-fusion.md  short-squeeze-sniper.md  social-sentiment-quant.md
Documentation/: CHANGELOG.md  USER_MANUAL.md
config/: default.yaml  secrets.yaml.example
src/: __init__.py
src/ai/: __init__.py  client.py  data_types.py  prompts.py
src/core/: __init__.py  base.py  cache.py  config.py  data_types.py  exceptions.py
src/pipeline/: __init__.py  orchestrator.py
src/teams/: __init__.py
src/teams/blue/: __init__.py  screener.py
src/teams/green/: __init__.py  screener.py
src/teams/orange/: __init__.py  screener.py
src/teams/purple/: __init__.py  screener.py
src/teams/red/: __init__.py  screener.py
src/teams/yellow/: __init__.py  screener.py
src/utils/: __init__.py  finviz_scraper.py  market_data.py  technical.py
